Fix dark mode box shadow bleeding into light mode

--- a/playbook/app/pb_kits/playbook/pb_nav/_bold_mixin.scss
+++ b/playbook/app/pb_kits/playbook/pb_nav/_bold_mixin.scss
@@ -6,7 +6,7 @@
       &[class*=_active] {
         background-color: $primary;
         color: $white;
-        box-shadow: 0 2px 10px 0 $shadow_dark;
+        box-shadow: $shadow_deep;
         @media (hover:hover) {
           &:hover {
             background-color: darken($primary, 4%);
@@ -19,6 +19,16 @@
           font-weight: $bolder;
         }
       }
-   }
+    }
+  }
+
+  .dark & {
+    [class*=pb_nav_list_kit_item][class*=pb_nav_list_item] {
+      &[class*=_link] {
+        &[class*=_active] {
+          box-shadow: 0 2px 10px 0 $shadow_dark;
+        }
+      }
+    }
   }
 }
